--- a/src/less/inner/modules/radio.less
+++ b/src/less/inner/modules/radio.less
@@ -5,128 +5,145 @@ input[type='radio']{
   display: none;
 }
 
-.@{nv-prefix}-radio-module{
-  .@{nv-prefix}-radio-simulation{
-    cursor: pointer;
+
+
+@radio-new-color: #4363f4;
+input[type='radio'][disabled],
+input[type='radio'].disabled {
+    cursor: not-allowed
+}
+
+.@{nv-prefix}-radio-wrapper {
+    position: relative;
     display: inline-block;
+    font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
     font-size: 14px;
-    color: @grey-8;
-    &:hover{
-      .@{nv-prefix}-radio-normal{
-        border-color: @geekblue-6;
-      }
+    // font-variant: tabular-nums;
+    line-height: 1.5;  //1.5
+    color: rgba(0,0,0,0.65);
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    white-space: nowrap;
+    outline: none;
+    margin-right: 8px;
+    cursor: pointer;
+    &.@{nv-prefix}-radio-wrapper-checked {
+
     }
-    .@{nv-prefix}-radio-normal{
-      display: inline-block;
-      width: 14px;
-      height: 14px;
-      border: @border-width-base  @border-style-base @grey-5;
-      border-radius: 50%;
-      position: relative;
-      vertical-align:top;
-      margin-right: 8px;
-      span{
-        display: none;
-        position: absolute;
-        width: 6px;
-        height: 6px;
-        top: 50%;
-        left: 50%;
-        margin: -3px 0 0 -3px;
-        background: @geekblue-6;
-        border-radius: 50%;
-      }
+    &.@{nv-prefix}-radio-wrapper-disabled {
+        .@{nv-prefix}-radio-label {
+            color: rgba(0,0,0,0.25);
+            cursor: not-allowed;
+        }
     }
-    .@{nv-prefix}-radio-text{
-      display: inline-block;
-      height: 14px;
-      line-height: 14px;
-      vertical-align: top;
+    &:hover {
+        .@{nv-prefix}-radio-clone {
+            .@{nv-prefix}-radio-inner {
+                border-color: @radio-new-color;
+            }
+        }
     }
-  }
-}
-.@{nv-prefix}-radio-radioed{
-  .@{nv-prefix}-radio-simulation{
-    .@{nv-prefix}-radio-normal{
-      border-color:@geekblue-6;
-      span{
-        display: block;
-      }
+    .@{nv-prefix}-radio-clone {
+        &.@{nv-prefix}-radio-checked {
+            .@{nv-prefix}-radio-inner {
+                border-color: @radio-new-color;
+                &:after {
+                    // transform: scale(1);
+                    transform: translate(-50%,-50%) scale(1);
+                    opacity: 1;
+                    transition: all .3s cubic-bezier(.78, .14, .15, .86);
+                }
+            }
+        }
+        &.@{nv-prefix}-radio-disabled {
+            .@{nv-prefix}-radio-inner {
+                border-color: #d9d9d9 !important;
+                background-color: #f5f5f5;
+                cursor: not-allowed;
+                &:after {
+                    background-color: #ccc;
+                }
+            }
+        }
+        &:hover {
+            .@{nv-prefix}-radio-inner {
+                border-color: @radio-new-color;
+            }
+        }
+        position: relative;
+        display: inline-block;
+        font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
+        font-size: 14px;
+        // font-variant: tabular-nums;
+        line-height: 1;  //1.5
+        color: rgba(0,0,0,0.65);
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        white-space: nowrap;
+        outline: none;
+        vertical-align: sub; //sub
+        cursor: pointer;
+        // 代糖
+        .@{nv-prefix}-radio-inner {
+            position: relative;
+            box-sizing: border-box; //ant-no
+            top: 0;
+            left: 0;
+            display: block;      /////FIXME !!!!!
+            // display: inline-block;  /////FIXME !!!!!
+            width: 14px;
+            height: 14px;
+            border-width: 1px;
+            border-style: solid;
+            // border-radius: 100%;
+            border-radius: 100px;
+            border-color: #d9d9d9;
+            background-color: #fff;
+            // border-radius: 100px;
+            transition: all .3s;
+
+            &:after {
+                position: absolute;
+                width: 6px;
+                height: 6px;
+                left: 50%;
+                top: 50%;
+                display: table;
+                border-radius: 100%;
+                border-radius: 8px;
+                background-color: @radio-new-color;
+                content: ' '; 
+                transform: translate(-50%,-50%) scale(0);
+                transition: all .3s ease-in;
+                opacity: 0;
+                border-top: 0; 
+                border-left: 0; 
+            }
+        }
+        // 源生
+        .@{nv-prefix}-radio-original {
+            position: absolute;
+            opacity: 0;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: -1; //1
+            outline: none;
+            margin: 0;
+            cursor: pointer;
+        }
     }
-  }
-}
-.@{nv-prefix}-radio-disable{
-  .@{nv-prefix}-radio-simulation{
-    cursor: not-allowed;
-    &:hover{
-      .@{nv-prefix}-radio-normal{
-        border-color: @grey-5;
-      }
+    .@{nv-prefix}-radio-label {
+        font-size: 14px;
+        padding-left: 8px;
+        padding-right: 8px;
     }
-    .@{nv-prefix}-radio-normal{
-      border: @border-width-base  @border-style-base @grey-5;
-      span{
-        background: #d9d9d9 ;
-      }
-    }
-    .@{nv-prefix}-radio-text{
-      opacity: 0.25;
-      //color: @grey-6;
-    }
-  }
-  input[type='radio']:checked+.@{nv-prefix}-radio-simulation{
-    .@{nv-prefix}-radio-normal{
-      border-color: #D9D9D9;
-      span{
-        display: block;
-        background-color:#D9D9D9 ;
-      }
-    }
-  }
-}
-.@{nv-prefix}-radio-middle{
-  display: block;
-}
-.@{nv-prefix}-radio-hide{
-  display: none;
-}
-.c-demo{
-  .@{nv-prefix}-radio-module{
-    margin-right: 40px;
-  }
-  .@{nv-prefix}-radio-middle{
-    margin-bottom:24px;
-  }
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.mixin(@name,@type) when (@name = @xs-name) and (@type = @screen-name-radio) {
-  //默认手机
-}
-.mixin(@name,@type) when (@name = @sm-name) and (@type = @screen-name-radio) {
-  //平板
-}
-.mixin(@name,@type) when (@name = @md-name) and (@type = @screen-name-radio) {
-  //桌面显示器
-}
-.mixin(@name,@type) when (@name = @lg-name) and (@type = @screen-name-radio) {
-  //大桌面显示器
-}
-.mixin(@name,@type) when (@name = @xl-name) and (@type = @screen-name-radio) {
-  //大屏慕数据展示
-}
