--- a/src/less/inner/modules/dropdown.less
+++ b/src/less/inner/modules/dropdown.less
@@ -116,7 +116,7 @@
     .@{nv-prefix}-dropdown-link {
         text-decoration: none;
         font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun, sans-serif;
-        color: @dropdown-color;
+        color: rgba(0,0,0,0.65);
         font-size: 14px;
         transition: color .3s ease;
         white-space: nowrap;
