--- a/src/js/outer/page/1.0.1/less/cdn_index.less
+++ b/src/js/outer/page/1.0.1/less/cdn_index.less
@@ -12,7 +12,7 @@
         position: relative;
         display: inline-block;
         margin: 0 5px;
-
+        vertical-align: middle;
         &.open {
             .@{nv-prefix}-dropdown-link {
                 .@{nv-prefix}-icon-angle {
