内置组件修改颜色

--- a/src/less/inner/modules/dropdown.less
+++ b/src/less/inner/modules/dropdown.less
@@ -3,7 +3,7 @@
  */
 
 @dropdown-color: #4363f4;
-@dropdown-hover-color: #40a9ff;
+@dropdown-hover-color: #4363f4;
 
 .@{nv-prefix}-dropdown {
     padding: 0 4px;
